crates/swc_ecma_parser/tests/test262-error-references/fail/fc7ed197a376fa5f.js.stderr
error: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/test262-parser/fail/fc7ed197a376fa5f.js:1:13
  |
1 | (function*({yield}) {})
  |             ^^^^^

